[package]
name = "calendar"
version = "0.1.0"
edition = "2021"
author = "MaxTheSyntax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
json = "0.12.4"
ics = "0.5.8"
colored = "2.0.0"
